more global service docs
